--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-scripts": "5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.5.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +38,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
